envoy.yaml
static_resources:
  clusters:
    - name: grpc_backend
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address: { address: 127.0.0.1, port_value: 50051 }
  listeners:
    - name: listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match: { prefix: "/hello.Greeter/" }
                          route: { cluster: grpc_backend }
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.router
